fix: no special treatment for dark mode. use opacity instead

--- a/tw-plugin/src/components/alerts.css
+++ b/tw-plugin/src/components/alerts.css
@@ -12,25 +12,25 @@
 }
 
 .fun-alert-info {
-  @apply bg-blue-400 border-blue-200 bg-opacity-20;
+  @apply bg-blue-400 border-blue-400 bg-opacity-20 border-opacity-50;
   /* @apply dark:bg-blue-400 dark:border-blue-500; */
-  @apply dark:border-blue-500;
+  /* @apply dark:border-blue-500; */
 }
 
 .fun-alert-warning {
-  @apply bg-yellow-400 border-yellow-200 bg-opacity-20;
+  @apply bg-yellow-400 border-yellow-400 bg-opacity-20 border-opacity-50;
   /* @apply dark:bg-yellow-400 dark:border-yellow-500; */
-  @apply dark:border-yellow-500;
+  /* @apply dark:border-yellow-500; */
 }
 
 .fun-alert-danger {
-  @apply bg-red-400 border-red-200 bg-opacity-20;
-  @apply dark:border-red-500;
+  @apply bg-red-400 border-red-400 bg-opacity-20 border-opacity-50;
+  /* @apply dark:border-red-500; */
 }
 
 .fun-alert-success {
-  @apply bg-green-400 border-green-200 bg-opacity-20;
-  @apply dark:border-green-400;
+  @apply bg-green-400 border-green-400 bg-opacity-20 border-opacity-50;
+  /* @apply dark:border-green-400; */
 }
 
 /* .fun-alert-info .fun-alert-icon {
